--- a/app/src/main/res/layout/calificaciones_manager.xml
+++ b/app/src/main/res/layout/calificaciones_manager.xml
@@ -47,6 +47,11 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="40dp"/>
+        <TextView
+            android:id="@+id/notaC"
+            android:textColor="#ff0000"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <ListView
             android:id="@+id/milista0"
             android:layout_width="match_parent"
