--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,99 +5,109 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <RelativeLayout
-        android:orientation="vertical"
-        android:gravity="center"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/bienvenida"
-            android:text="BIENVENIDO(A)"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:textSize="20dp"
+        <RelativeLayout
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/bienvenida"
+                android:text="BIENVENIDO(A)"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:textSize="20dp"
 
-            android:layout_margin="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/usuario"
-            android:layout_below="@id/bienvenida"
-            android:textStyle="bold|italic"
-            android:textColor="@color/colorRojo"
-            android:textSize="20dp"
-            android:layout_margin="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/calendario"
-            android:layout_below="@id/usuario"
-            android:textColor="#ffffff"
-            android:background="@drawable/bordec2"
-            android:text="CALENDARIO"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/calificaciones"
-            android:layout_below="@id/calendario"
-            android:textColor="#ffffff"
-            android:background="@drawable/bordec2"
-            android:text="CALIFICACIONES"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/mensajes"
-            android:layout_below="@id/calificaciones"
-            android:textColor="#ffffff"
-            android:background="@drawable/bordec2"
-            android:text="MENSAJES"
-            android:layout_margin="10dp"
-            android:layout_centerInParent="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/pagos"
-            android:layout_below="@id/mensajes"
-            android:textColor="#ffffff"
-            android:background="@drawable/bordec2"
-            android:text="PAGOS"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/usuario"
+                android:layout_below="@id/bienvenida"
+                android:textStyle="bold|italic"
+                android:textColor="@color/colorRojo"
+                android:textSize="20dp"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/atencion"
+                android:layout_below="@id/usuario"
+                android:textColor="#ffffff"
+                android:background="@drawable/bordec2"
+                android:text="ATENCIÓN AL CLIENTE"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/calendario"
+                android:layout_below="@id/atencion"
+                android:textColor="#ffffff"
+                android:background="@drawable/bordec2"
+                android:text="CALENDARIO"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/calificaciones"
+                android:layout_below="@id/calendario"
+                android:textColor="#ffffff"
+                android:background="@drawable/bordec2"
+                android:text="CALIFICACIONES"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/mensajes"
+                android:layout_below="@id/calificaciones"
+                android:textColor="#ffffff"
+                android:background="@drawable/bordec2"
+                android:text="MENSAJES"
+                android:layout_margin="10dp"
+                android:layout_centerInParent="true"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/pagos"
+                android:layout_below="@id/mensajes"
+                android:textColor="#ffffff"
+                android:background="@drawable/bordec2"
+                android:text="PAGOS"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <Button
-            android:id="@+id/virtualroom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/pagos"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/bordec2"
-            android:text="VIRTUAL ROOM"
-            android:textColor="#ffffff" />
-        <ListView
-            android:id="@+id/milista"
-            android:layout_centerInParent="true"
-            android:layout_below="@id/virtualroom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:id="@+id/cerrar"
-            android:layout_below="@id/milista"
-            android:textColor="#ffffff"
-            android:background="@drawable/bordec1"
-            android:text="CERRAR SESIÓN"
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </RelativeLayout>
-
-
-
+            <Button
+                android:id="@+id/virtualroom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/pagos"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/bordec2"
+                android:text="VIRTUAL ROOM"
+                android:textColor="#ffffff" />
+            <ListView
+                android:id="@+id/milista"
+                android:layout_centerInParent="true"
+                android:layout_below="@id/virtualroom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/cerrar"
+                android:layout_below="@id/milista"
+                android:textColor="#ffffff"
+                android:background="@drawable/bordec1"
+                android:text="CERRAR SESIÓN"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </RelativeLayout>
+    </ScrollView>
 </LinearLayout>
