--- a/app/src/main/res/layout/calificaciones_manager.xml
+++ b/app/src/main/res/layout/calificaciones_manager.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".controler.MensajeManager">
+
     <ImageView
-        android:id="@+id/atras"
+        android:id="@+id/atras1"
         android:src="@drawable/boton_atras"
         android:background="#B6EDF6"
         android:layout_alignParentTop="true"
@@ -16,7 +17,7 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_below="@id/atras"
+        android:layout_below="@id/atras1"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="40dp"/>
@@ -35,13 +36,33 @@
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <Button
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/atras"
+                android:src="@drawable/boton_atras"
+                android:background="#B6EDF6"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_width="40dp"
+                android:layout_height="40dp"/>
+            <TextView
+                android:id="@+id/nombreCurso"
+                android:textSize="25dp"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal" />
+        </LinearLayout>
+        <!--<Button
             android:id="@+id/ocultar"
             android:text="VOLVER"
             android:textColor="#ffffff"
             android:background="@drawable/bordec1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"/>-->
         <Spinner
             android:id="@+id/spinner0"
             android:layout_gravity="center"
